[package]
name = "music-assistant"
version = "0.1.0"
description = "Music Assistant Companion App"
authors = ["The Music Assistant Team"]
license = "Apache-2.0"
repository = "https://github.com/music-assistant/desktop-companion"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
url = "2.5.4"
tungstenite = {version = "0.27.0", features = ["native-tls"] }
discord-rich-presence = "0.2.5"
tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# [profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.
