[package]
name = "music-assistant"
version = "0.1.0"
description = "Music Assistant Companion App"
authors = ["The Music Assistant Team"]
license = "Apache-2.0"
repository = "https://github.com/music-assistant/desktop-companion"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dirs = "5.0"
discord-rich-presence = "1.0"
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2.7"
tauri-plugin-opener = "2.5"
mdns-sd = "0.12"
flume = "0.11"

# Sendspin native client
# Using phase3-artwork-visualizer branch for full protocol support (commands, state, artwork)
sendspin = { git = "https://github.com/Sendspin/sendspin-rs", branch = "phase3-artwork-visualizer" }
cpal = "0.15"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
tokio = { version = "1", features = ["sync", "macros", "time"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
parking_lot = "0.12"
png = "0.17"

# System media controls (Now Playing integration)
souvlaki = "0.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3"
tauri-plugin-updater = "2.9"
tauri-plugin-window-state = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# [profile.release]
# codegen-units = 1 # Allows LLVM to perform better optimization.
# lto = true # Enables link-time-optimizations.
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort" # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.
